fix convert plugin BUILD bug

--- a/tensorboard/BUILD
+++ b/tensorboard/BUILD
@@ -182,6 +182,7 @@ py_library(
         "//tensorboard/plugins/debugger:debugger_plugin_loader",
         "//tensorboard/plugins/distribution:distributions_plugin",
         "//tensorboard/plugins/graph_edit:graphedit_plugin",
+        "//tensorboard/plugins/convert:convert_plugin",
         "//tensorboard/plugins/histogram:histograms_plugin",
         "//tensorboard/plugins/hparams:hparams_plugin_loader",
         "//tensorboard/plugins/image:images_plugin",
