--- a/tensorboard/BUILD
+++ b/tensorboard/BUILD
@@ -184,6 +184,7 @@ py_library(
         "//tensorboard/plugins/graph_edit:graphedit_plugin",
         "//tensorboard/plugins/debug_db:debugdb_plugin",
         "//tensorboard/plugins/convert:convert_plugin",
+        "//tensorboard/plugins/inference:inference_plugin",
         "//tensorboard/plugins/histogram:histograms_plugin",
         "//tensorboard/plugins/hparams:hparams_plugin_loader",
         "//tensorboard/plugins/image:images_plugin",
