--- a/tensorboard/components/tf_tensorboard/BUILD
+++ b/tensorboard/components/tf_tensorboard/BUILD
@@ -73,6 +73,7 @@ tf_web_library(
         "//tensorboard/plugins/graph_edit/tf_graph_edit_dashboard",
         "//tensorboard/plugins/convert/tf_convert_dashboard",
         "//tensorboard/plugins/debug_db/tf_debugdb_dashboard",
+        "//tensorboard/plugins/inference/tf_inference_dashboard",
         "//tensorboard/plugins/histogram/tf_histogram_dashboard",
         "//tensorboard/plugins/hparams/tf_hparams_dashboard",
         "//tensorboard/plugins/image/tf_image_dashboard",
