--- a/tensorboard/plugins/inference/tf_inference_dashboard/BUILD
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/BUILD
@@ -35,5 +35,6 @@ tf_web_library(
         "@org_polymer_paper_input",
         "@org_polymer_paper_slider",
         "@org_polymer_paper_spinner",
+        "@org_polymer_paper_progress",
     ],
 )
