vertical layout;page change with bug

--- a/tensorboard/plugins/inference/tf_inference_dashboard/BUILD
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/BUILD
@@ -36,5 +36,6 @@ tf_web_library(
         "@org_polymer_paper_slider",
         "@org_polymer_paper_spinner",
         "@org_polymer_paper_progress",
+        "@org_polymer_paper_tabs",
     ],
 )
