--- a/tensorboard/components/tf_imports/BUILD
+++ b/tensorboard/components/tf_imports/BUILD
@@ -127,6 +127,7 @@ tf_web_library(
     ],
     path = "/tf-imports",
     visibility = ["//visibility:public"],
+    deps = ["@com_katex"],
 )
 
 tf_web_library(
